--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,7 @@
 <h2>Start</h2>
+
+<ul>
+  {{#each todos}}
+    <li><a href="/{{id}}">{{description}}, {{created}}, {{done}}</a></li>
+  {{/each}}
+</ul>
