--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -10,8 +11,10 @@
       <h1>NodeJs TODO</h1>
       <nav>
         <a href="/">Home</a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="/create">Create</a>
+        <a href="/remove">Remove</a>
+        <a href="/update">Update</a>
+        <a href="/delete">Delete</a>
       </nav>
     </header>
     {{{body}}}
