Added some undersites  and fixed id.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,10 +11,10 @@
       <h1>NodeJs TODO</h1>
       <nav>
         <a href="/">Home</a>
-        <a href="/create">Create</a>
-        <a href="/remove">Remove</a>
-        <a href="/update">Update</a>
-        <a href="/delete">Delete</a>
+        <a href="/todo">Todos</a>
+        <a href="/todo/create">Create</a>
+        <a href="/todo/update">Update</a>
+        <a href="/todo/delete">Delete</a>
       </nav>
     </header>
     {{{body}}}
