--- a/views/todoCreate.hbs
+++ b/views/todoCreate.hbs
@@ -1,1 +1,7 @@
 <h2>Create new ToDo</h2>
+
+<form action="/todo/create" method="post">
+  <input type="datetime" name="created" placeholder="Date created" />
+  <input type="text" name="description" placeholder="Description" />
+  <input type="text" name="done" placeholder="false/true" />
+  <input type="submit" value="Add" /></form>
