--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,8 +13,8 @@
         <a href="/">Home</a>
         <a href="/todo">Todos</a>
         <a href="/todo/create">Create</a>
-        <a href="/todo/update">Update</a>
-        <a href="/todo/delete">Delete</a>
+        {{! <a href="/todo/:id/update">Update</a>
+        <a href="/todo/:id/delete">Delete</a> }}
       </nav>
     </header>
     {{{body}}}
