--- a/views/todoUpdate.hbs
+++ b/views/todoUpdate.hbs
@@ -1,1 +1,21 @@
 <h2>Update a ToDo</h2>
+
+<form action="/todo/{{id}}/update" method="post">
+  <input
+    type="datetime-local"
+    name="created"
+    placeholder="Date created"
+    value="{{created}}"
+  />
+  <input
+    type="text"
+    name="description"
+    placeholder="Description"
+    value="{{description}}"
+  />
+  <select name="done">
+    <option value="false">False</option>
+    <option value="true">True</option>
+  </select>
+  <input type="submit" value="Change" />
+</form>
