fixed some links

--- a/views/oneTodo.hbs
+++ b/views/oneTodo.hbs
@@ -13,6 +13,6 @@
   {{done}}
 </p>
 
-<a href="/todo">Back</a>
+<a href="/todo">To List</a>
 <a href="/todo/{{id}}/update">Update</a>
 <a href="/todo/{{id}}/delete">Delete</a>
