--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>NodeJs TODO</h1>
+      <h1>NodeJs ToDo</h1>
       <nav>
         <a href="/">Home</a>
         <a href="/todo">Todos</a>
