some basic styling

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,5 +18,8 @@
       </nav>
     </header>
     {{{body}}}
+    <footer>
+      This NodeJs project was created by Rasmus using basic express
+    </footer>
   </body>
 </html>
