--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,14 @@
 }
 body {
   text-align: center;
+  color: #ccc;
+  background-color: rgb(27, 27, 27);
 }
-a,
-a:visited {
-  color: #515151;
+
+a {
+  color: rgb(224, 162, 45);
 }
+
 li {
   list-style: none;
 }
@@ -19,15 +22,32 @@ nav,
 p {
   margin: 0.5em 0;
 }
-input[type="text"],
-input[type="number"] {
+
+input {
+  width: 200px;
+  padding: 6px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  color: black;
   display: block;
   margin: 0.5em auto;
+  background-color: rgb(36, 36, 36);
+  color: rgb(255, 201, 53);
 }
-input[type="text"],
-input[type="number"],
+
 input[type="submit"] {
-  padding: 0.3em 0.5em;
-  border-radius: 5px;
-  border: 1px solid #515151;
+  width: 160px;
+}
+
+select {
+  width: 160px;
+  text-align: center;
+  padding: 6px;
+  background-color: rgb(36, 36, 36);
+  color: rgb(255, 201, 53);
+}
+
+footer {
+  padding: 20px;
 }
