--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,8 @@
         <a href="/">Home</a>
         <a href="/todo">Todos</a>
         <a href="/todo/create">Create</a>
+        <a href="todo/sortEarly">Sort Early</a>
+        <a href="todo/sortLate">Sort Late</a>
         {{! <a href="/todo/:id/update">Update</a>
         <a href="/todo/:id/delete">Delete</a> }}
       </nav>
