Some kind of sort functionality, early version.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,15 +13,17 @@
         <a href="/">Home</a>
         <a href="/todo">Todos</a>
         <a href="/todo/create">Create</a>
-        <a href="todo/sortEarly">Sort Early</a>
-        <a href="todo/sortLate">Sort Late</a>
+        <a href="/todo/sortEarly">Sort Early</a>
+        <a href="/todo/sortLate">Sort Late</a>
+        <a href="/todo/done">Done Todos</a>
         {{! <a href="/todo/:id/update">Update</a>
         <a href="/todo/:id/delete">Delete</a> }}
       </nav>
     </header>
     {{{body}}}
     <footer>
-      This NodeJs project was created by Rasmus using basic express
+      This NodeJs project was created by Rasmus using express and express
+      handlebars.
     </footer>
   </body>
 </html>
