Fixed the basic functionality and the required.

--- a/views/todoDone.hbs
+++ b/views/todoDone.hbs
@@ -1,7 +1,7 @@
 <h2>Done todos</h2>
 
 <ul>
-  {{#each todos}}
+  {{#each doneTodo}}
     <li>
       <a href="/todo/{{id}}">{{description}}, {{created}}, {{done}}</a>
     </li>
