--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-  margin: 2px;
+  margin: 3px;
   color: rgb(224, 162, 45);
 }
 
@@ -53,7 +53,7 @@ footer {
   padding: 20px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   h1 {
     font-size: 2.6rem;
   }
@@ -85,5 +85,40 @@ footer {
 
   footer {
     font-size: 1.2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  h1 {
+    font-size: 2.6rem;
+  }
+  a {
+    margin: 4px;
+    font-size: 1.6rem;
+  }
+  h2 {
+    font-size: 2.6rem;
+  }
+  p {
+    font-size: 1.8rem;
+  }
+
+  input {
+    width: 300px;
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  select {
+    font-size: 1.6rem;
+    width: 200px;
+  }
+
+  input[type="submit"] {
+    width: 200px;
+  }
+
+  footer {
+    font-size: 1.4rem;
   }
 }
