Connected to the MongoDB database

--- a/views/todoDelete.hbs
+++ b/views/todoDelete.hbs
@@ -13,5 +13,5 @@
   {{done}}
 </p>
 
-<form action="/todo/{{id}}/delete" method="post">
+<form action="/todo/{{_id}}/delete" method="post">
   <input type="submit" value="Delete" /></form>
