--- a/views/todoRead.hbs
+++ b/views/todoRead.hbs
@@ -2,6 +2,6 @@
 
 <ul>
   {{#each todos}}
-    <li><a href="/todo/{{id}}">{{description}}, {{created}}, {{done}}</a></li>
+    <li><a href="/todo/{{_id}}">{{description}}, {{created}}, {{done}}</a></li>
   {{/each}}
 </ul>
