--- a/views/oneTodo.hbs
+++ b/views/oneTodo.hbs
@@ -14,5 +14,5 @@
 </p>
 
 <a href="/todo">To List</a>
-<a href="/todo/{{id}}/update">Update</a>
-<a href="/todo/{{id}}/delete">Delete</a>
+<a href="/todo/{{_id}}/update">Update</a>
+<a href="/todo/{{_id}}/delete">Delete</a>
