--- a/views/todoCreate.hbs
+++ b/views/todoCreate.hbs
@@ -1,11 +1,21 @@
 <h2>Create new ToDo</h2>
 
 <form action="/todo/create" method="post">
-  <input type="datetime-local" name="created" placeholder="Date created" />
-  <input type="text" name="description" placeholder="Description" />
+  <input
+    type="datetime-local"
+    name="created"
+    placeholder="Date created"
+    value="{{created}}"
+  />
+  <input
+    type="text"
+    name="description"
+    placeholder="Description"
+    value="{{description}}"
+  />
   <select name="done">
     <option value="false">False</option>
     <option value="true">True</option>
   </select>
-  <br />
-  <input type="submit" value="Add" /></form>
+  <input type="submit" value="Add" />
+</form>
