--- a/views/todoDone.hbs
+++ b/views/todoDone.hbs
@@ -3,7 +3,7 @@
 <ul>
   {{#each doneTodo}}
     <li>
-      <a href="/todo/{{id}}">{{description}}, {{created}}, {{done}}</a>
+      <a href="/todo/{{_id}}">{{description}}, {{created}}, {{done}}</a>
     </li>
   {{/each}}
 </ul>
