--- a/views/todoRead.hbs
+++ b/views/todoRead.hbs
@@ -2,6 +2,7 @@
 
 <ul>
   {{#each todos}}
-    <li><a href="/todo/{{_id}}">{{description}}, {{created}}, {{done}}</a></li>
+    <p><a href="/todo/{{_id}}">{{description}}, {{created}}, {{done}}</a></p>
+    {{!-- <li><a href="/todo/{{_id}}">{{description}}, {{created}}, {{done}}</a></li> --}}
   {{/each}}
 </ul>
