Modified the sort routes.

--- a/views/todoCreate.hbs
+++ b/views/todoCreate.hbs
@@ -5,13 +5,13 @@
     type="datetime-local"
     name="created"
     placeholder="Date created"
-    value="{{created}}"
+    {{!-- value="{{created}}" --}}
   />
   <input
     type="text"
     name="description"
     placeholder="Description"
-    value="{{description}}"
+    {{!-- value="{{description}}" --}}
   />
   <select name="done">
     <option value="false">False</option>
