--- a/views/oneTodo.hbs
+++ b/views/oneTodo.hbs
@@ -17,5 +17,5 @@
 <a href="/todo/{{_id}}/update">Update</a>
 
 <form action="/todo/{{_id}}/delete" method="post">
-  <input type="submit" value="Ta bort" class="delete-btn" />
+  <input type="submit" value="Remove" class="delete-btn" />
 </form>
