--- a/views/todoUpdate.hbs
+++ b/views/todoUpdate.hbs
@@ -16,5 +16,5 @@
     <option value="false">False</option>
     <option value="true">True</option>
   </select>
-  <input type="submit" value="Change" />
+  <input type="submit" value="Update" />
 </form>
