--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,8 +13,8 @@
         <a href="/">Home</a>
         <a href="/todo">Todos</a>
         <a href="/todo/create">Create</a>
-        <a href="/todo/sortEarly">Sort Early</a>
-        <a href="/todo/sortLate">Sort Late</a>
+        <a href="/todo/sortAsc">Sort Asc</a>
+        <a href="/todo/sortDesc">Sort Des</a>
         <a href="/todo/done">Done Todos</a>
         {{! <a href="/todo/:id/update">Update</a>
         <a href="/todo/:id/delete">Delete</a> }}
