--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,8 +22,8 @@
     </header>
     {{{body}}}
     <footer>
-      This NodeJs project was created by Rasmus using express and express
-      handlebars.
+      This NodeJs project was created by Rasmus using Express,
+      Express-Handlebars and MongoDB.
     </footer>
   </body>
 </html>
